Fix upsell layout issue when no product description and reviews are set.

--- a/assets/css/twenty-twenty.scss
+++ b/assets/css/twenty-twenty.scss
@@ -2058,6 +2058,10 @@ a.reset_variations {
  */
 .woocommerce {
 
+	&.single-product .product section {
+		float: left;
+	}
+
 	section {
 		padding-top: 2rem;
 		padding-bottom: 0;
